# SpeculativeTomasulo

./: CMakeLists.txt  Interpreter.cpp  Interpreter.h  MainWidget.cpp  MainWidget.h  README.md  Window.cpp  Window.h  entrada.txt  fatorial.txt  fully.txt  main.cpp
